--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,7 +3,7 @@ productName: Cygnus
 directories:
   output: dist
 extraResources:
-  - from: ../frontend-web/dist
+  - from: ../web/dist
     to: app/dist
 win:
   target:
