--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "private": true,
   "scripts": {
-    "build:ui": "npm run build:native --prefix ../frontend-web",
+    "build:ui": "npm run build:native --prefix ../web",
     "dev": "npm run build:ui && electron .",
     "pack": "npm run build:ui && electron-builder --win"
   },
